--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Django==4.2.7
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
-Pillow==9.5.0
+- Pillow==10.0.1
++ Pillow==9.5.0
 psycopg2-binary==2.9.9
 python-decouple==3.8
 django-modeltranslation==0.18.11
