--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # ---------------------------
 # Python
 # ---------------------------
+__pycache__/
 *.py[cod]
 *.pyo
 *.pyd
@@ -21,7 +22,15 @@ var/
 *.swo
 
 
-#ff
+
+# ---------------------------
+# Django
+# ---------------------------
+
+# Migrations
+*/migrations/*.py
+!*/migrations/__init__.py
+
 
 # ---------------------------
 # IDE / Editor
